--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="paper" id="paper">
             <button class="close-btn" onclick="closePaper()">X</button>
             <p>Gửi Vy Phương,<br>
-            Nay là 24/2, sinh nhật của người dễ thương xinh đẹp nhất trên đời. Vậy là mình đã biết nhau được 126 ngày, 101 ngày set love với nhau trong liên quân, có chuỗi 109 tiktok và là em bé của anh được 55 ngày. Chúc bé yêu của anh tuổi mới xinh hơn, giỏi hơn, NGỦ SỚM HƠN và YÊU ANH BP HƠN. Dạo này mình có làm vợ buồn, nên mình xin lỗi vợ nhiều, vợ kiên nhẫn với anh để từ từ mình sẽ chứng minh cho vợ thấy là mình hiểu vợ và yêu vợ nhường nào. Hi vọng đôi mình sẽ ở bên nhau lâu hơn nữa. Hi, mình ngu văn nên mình viết hơi ấy ấy ạ.</p>
+            Nay là 24/2, sinh nhật của người dễ thương xinh đẹp nhất trên đời. Vậy là mình đã biết nhau được 126 ngày, 101 ngày set love với nhau trong liên quân, có chuỗi 109 tiktok và là em bé của anh được 55 ngày. Chúc bé yêu của anh tuổi mới xinh hơn, giỏi hơn, NGỦ SỚM HƠN và YÊU ANH BP HƠN. Dạo này mình có làm vợ buồn, nên mình xin lỗi vợ nhiều, vợ kiên nhẫn với anh nha. Hi vọng đôi mình sẽ ở bên nhau lâu hơn nữa. Hi, mình ngu văn nên mình viết hơi ấy ấy ạ.</p>
             <p>Nói chung là, mình yêu Vy Phương. Anh yêu em siêu siêu nhiều luôn, mãi là em bé của anh nha.</p>
             <p>Bảo Phúc<br>ANH YÊU EM</p>
         </div>
